# db_asm_3

./: .gitignore  README.md  docker-compose.yml
.github/: copilot-instructions.md
backend/: Dockerfile  main.py  pyproject.toml
backend/app/: duck_init.sql  schemas.py  settings.py
backend/app/db/: connector.py  duck.py  models.py  postgres.py  scylla.py
backend/app/db/seed/: duck_seed_data.sql  seed_data.sql
backend/app/endpoint/: __init__.py
db_seed/: ASM3.sql  duck_init.sql
db_seed/scylla/: create_schema.cql  init.sh  seed_data.cql
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: index.ts
frontend/src/components/: ApplicationsTable.vue  BaseTable.vue  CampaignTable.vue  Home.vue  OrganizationTable.vue  PublicationTable.vue  UserTable.vue
frontend/src/hooks/: mutations.ts  queries.ts
frontend/src/types/: index.ts
