[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb-engine>=0.17.0",
    "fastapi[standard]>=0.120.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.11.0",
    "scylla-driver>=3.29.5",
    "sqlmodel>=0.0.27",
]
